--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>SimpleArenaManager</groupId>
-	<artifactId>SimpleArenaManager</artifactId>
+	<artifactId>simplearenamanager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Shayegan8 Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/Shayegan8/simple-arenaManager</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<resources>
@@ -27,4 +35,6 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
 </project>
