Maven issue fixed

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 				<jdk>[1.8,)</jdk>
 			</activation>
 			<build>
-				<sourceDirectory>src</sourceDirectory>
+				<!-- <sourceDirectory>src</sourceDirectory> -->
 				<resources>
 					<resource>
 						<directory>src</directory>
@@ -55,15 +55,15 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>spigot</groupId>
-			<artifactId>spigot</artifactId>
+			<groupId>b</groupId>
+			<artifactId>bb</artifactId>
 			<scope>system</scope>
 			<version>1.8.8t</version>
 			<systemPath>${basedir}/lib/spigot-1.8.8.jar</systemPath>
 		</dependency>
 		<dependency>
-			<groupId>spigot</groupId>
-			<artifactId>spigot</artifactId>
+			<groupId>a</groupId>
+			<artifactId>aa</artifactId>
 			<scope>system</scope>
 			<version>1.8.8t</version>
 			<systemPath>${basedir}/lib/citizens-2.jar</systemPath>
