--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,21 @@
 		</profile>
 	</profiles>
 
+	<repositories>
+		<repository>
+			<id>placeholderapi</id>
+			<url>
+				https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
+		<dependency>
+			<groupId>me.clip</groupId>
+			<artifactId>placeholderapi</artifactId>
+			<version>2.11.5</version>
+			<scope>provided</scope>
+		</dependency>
 		<dependency>
 			<groupId>b</groupId>
 			<artifactId>bb</artifactId>
