For stupid reason permissions changed, readme edited

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<properties>
+		<bb-systemPath>${basedir}/lib/spigot-1.8.8.jar</bb-systemPath>
+	</properties>
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>SimpleArenaManager</groupId>
 	<artifactId>simplearenamanager</artifactId>
@@ -78,7 +82,7 @@
 			<artifactId>bb</artifactId>
 			<scope>system</scope>
 			<version>1.8.8t</version>
-			<systemPath>${basedir}/lib/spigot-1.8.8.jar</systemPath>
+			<systemPath>${bb-systemPath}</systemPath>
 		</dependency>
 	</dependencies>
 
